# c-bootcamp-morganburch

./: CMakeLists.txt  README.md
.github/workflows/: cmake.yml
R-FORTH/: CMakeLists.txt  README.md
R-FORTH/forth-stack/: int-stack.c  int-stack.h  int_stack.c  int_stack.h  int_stack_demo.c  int_stack_tests.cc
R-FORTH/forth_stack/: CMakeLists.txt  copy_token.c  forth_hashtable.c  forth_hashtable.h  forth_hashtable_demo.c  forth_hashtable_tests.cc  forth_main.c  int_stack.h  int_stack_io_commands.h  main.c
R-FORTH/hashtable/: CMakeLists.txt  forth_hashtable.c  forth_hashtable.h  forth_hashtable_tests.cc  main.c
R-FORTH/token/: CMakeLists.txt  main.c  token.c  token.h  token_tests.c
token/: main.c  token.c  token.h
